--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
       <main>
-        <form action="">
+        <form action="https://formspree.io/f/xjvljzoj" method="post" >
             <div class="header">
                 <h1>Sign in</h1>
                 Or <a href="www.google.com">register for an account</a>
