--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <br>
             <div class="button">
-                <button type="submit">Sign in</button>
+                <button type="submit"><strong>Sign in</strong></button>
             </div>
             <br>
             <div class="link">
